--- a/.tmux.conf
+++ b/.tmux.conf
@@ -2,6 +2,9 @@
 set-window-option -g mode-keys vi
 set-option -g history-limit 10000
 
+bind-key -t vi-copy v begin-selection
+bind-key -t vi-copy y copy-pipe "reattach-to-user-namespace pbcopy"
+
 bind-key r source-file ~/.tmux.conf
 
 set -g mouse on
