docs: add statistics cheat sheet & .tmux.conf to press C-b C-k to clear scroll back history

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -17,6 +17,12 @@ bind M \
     set -g mouse off \;\
     display 'Mouse: OFF'
 
+# Use prefix C-l to clear the visible scrollback lines
+bind C-l send-keys 'C-l'
+
+# Use prefix C-k to clear the scrolled off (hidden) buffer lines
+bind C-k clear-history
+
 bind-key -n C-v paste-buffer # 'paste' # 'paste(from tmux to tmux)'
 
 ## Join windows: <prefix> s, <prefix> j
