feat: .tmux.con add support tmux-yank and tmux-copycat

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -1,9 +1,9 @@
 
+set -g default-terminal "screen-256color" # colors!
 set-window-option -g mode-keys vi
 set-option -g history-limit 10000
 
 bind-key -t vi-copy v begin-selection
-bind-key -t vi-copy y copy-pipe "reattach-to-user-namespace pbcopy"
 
 bind-key r source-file ~/.tmux.conf
 
@@ -46,3 +46,6 @@ set -g @themepack 'powerline/block/blue'
 
 set -g @plugin 'tmux-plugins/tmux-resurrect'
 set -g @plugin 'tmux-plugins/tmux-continuum'
+set -g @plugin 'tmux-plugins/tmux-yank'
+set -g @shell_mode 'vi'
+set -g @plugin 'tmux-plugins/tmux-copycat'
