feat: .tmux.conf support copy-paste to/from system clipboard for v2.9

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -1,9 +1,11 @@
 
-set -g default-terminal "screen-256color" # colors!
 set-window-option -g mode-keys vi
 set-option -g history-limit 10000
 
-bind-key -t vi-copy v begin-selection
+bind-key -T copy-mode-vi v send-keys -X begin-selection
+bind-key -T copy-mode-vi y send-keys -X copy-selection
+bind-key -T copy-mode-vi r send-keys -X rectangle-toggle
+bind-key -n C-v paste-buffer # 'paste' # 'paste(from tmux to tmux)'
 
 bind-key r source-file ~/.tmux.conf
 
@@ -22,8 +24,6 @@ bind C-l send-keys 'C-l'
 
 # Use prefix C-k to clear the scrolled off (hidden) buffer lines
 bind C-k clear-history
-
-bind-key -n C-v paste-buffer # 'paste' # 'paste(from tmux to tmux)'
 
 ## Join windows: <prefix> s, <prefix> j
 bind-key j command-prompt -p "join pane from:"  "join-pane -s '%%'"
