feat: add k/K to on/off sync panel

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -9,6 +9,16 @@ bind-key -n C-v paste-buffer # 'paste' # 'paste(from tmux to tmux)'
 
 bind-key r source-file ~/.tmux.conf
 
+# Toggle synpanes on
+bind k \
+    set synchronize-panes on \;\
+    display 'SynPanes: ON'
+
+# Toggle synpanes off
+bind K \
+    set synchronize-panes off \;\
+    display 'SynPanes: OFF'
+
 set -g mouse on
 bind m \
     set -g mouse on \;\
