--- a/.tmux.conf
+++ b/.tmux.conf
@@ -2,10 +2,7 @@
 set-window-option -g mode-keys vi
 set-option -g history-limit 10000
 
-bind-key -T copy-mode-vi v send-keys -X begin-selection
-bind-key -T copy-mode-vi y send-keys -X copy-selection
-bind-key -T copy-mode-vi r send-keys -X rectangle-toggle
-
+# source .tmux.conf
 bind-key r source-file ~/.tmux.conf
 
 # Toggle synpanes on
@@ -47,14 +44,16 @@ set -g @plugin 'tmux-plugins/tmux-sensible'
 # set -g @plugin 'git@github.com/user/plugin'
 # set -g @plugin 'git@bitbucket.com/user/plugin'
 
-# Initialize TMUX plugin manager (keep this line at the very bottom of tmux.conf)
-run '~/.tmux/plugins/tpm/tpm'
-
 set -g @plugin 'jimeh/tmux-themepack'
 set -g @themepack 'powerline/block/blue'
 
 set -g @plugin 'tmux-plugins/tmux-resurrect'
 set -g @plugin 'tmux-plugins/tmux-continuum'
+set -g @continuum-boot 'on'
+set -g @continuum-restore 'on'
 set -g @plugin 'tmux-plugins/tmux-yank'
 set -g @shell_mode 'vi'
 set -g @plugin 'tmux-plugins/tmux-copycat'
+
+# Initialize TMUX plugin manager (keep this line at the very bottom of tmux.conf)
+run '~/.tmux/plugins/tpm/tpm'
