update LeetCode solution - algorithm

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -2,6 +2,10 @@
 set-window-option -g mode-keys vi
 set-option -g history-limit 10000
 
+# Tmux statusline
+set -g default-terminal "screen-256color"
+source /usr/local/lib/python3.8/dist-packages/powerline/bindings/tmux/powerline.conf
+
 # source .tmux.conf
 bind-key r source-file ~/.tmux.conf
 
@@ -57,3 +61,4 @@ set -g @plugin 'tmux-plugins/tmux-copycat'
 
 # Initialize TMUX plugin manager (keep this line at the very bottom of tmux.conf)
 run '~/.tmux/plugins/tpm/tpm'
+
