--- a/.tmux.conf
+++ b/.tmux.conf
@@ -2,6 +2,9 @@
 set-window-option -g mode-keys vi
 set-option -g history-limit 10000
 
+# vim-oscyank 
+set -s set-clipboard on
+
 # Tmux statusline
 set -g default-terminal "screen-256color"
 source /usr/local/lib/python3.8/dist-packages/powerline/bindings/tmux/powerline.conf
